--- a/ORG/Nyelvtan/2_A magyar_nyelv_tortenete.org
+++ b/ORG/Nyelvtan/2_A magyar_nyelv_tortenete.org
@@ -52,12 +52,12 @@
 
 *2. A nyelvtörténet forrásai: kézírásos és nyomtatott nyelvemlékek*
 
-Nyelvemlékek: a nyelv* korábbi állapotát* tükröző írásos források.
+Nyelvemlékek: a nyelv *korábbi állapotát* tükröző írásos források.
 
 *Kézírásos nyelvemlékek*
 
-- Halotti beszéd és könyörgés (1192-1195): *legrégebbi* fennmaradt *magyar
-szöveg.*
+- Halotti beszéd és könyörgés (1192-1195): *legrégebbi* fennmaradt magyar
+szöveg.
 
 - Ómagyar Mária-siralom (1300 körül): *legrégebbi magyar vers.*
 
@@ -70,8 +70,8 @@ szöveg.*
 - Sylvester János Újszövetség-fordítása (1541): első nyomtatott magyar
 Újszövetség.
 
-- Vizsolyi János féle Biblia (1590): *első teljes magyar bibliafordítás
-nyomtatásban.*
+- Vizsolyi János féle Biblia (1590): első teljes magyar bibliafordítás
+nyomtatásban.
 
 *3. Nyelvújítás lényege és jelentősége példák alapján*
 
