--- a/ORG/Nyelvtan/5_A_szoveg.org
+++ b/ORG/Nyelvtan/5_A_szoveg.org
@@ -45,7 +45,7 @@ A szövegértés több szinten valósul meg:
 - *Összefoglalás, reflektálás:* a szöveg *lényegének megfogalmazása saját
   szavakkal*.
 
-*A továbbtanuláshoz, illetve a munka világához szükséges szövegtípusok*
+*2. A továbbtanuláshoz, illetve a munka világához szükséges szövegtípusok*
 
 A továbbtanulás és az elhelyezkedés során különböző hivatalos és
 gyakorlati szövegtípusokkal találkozhatunk. Ezek megfelelő ismerete és
