--- a/ORG/Irodalom/18_Az_angol_reneszansz_drama.org
+++ b/ORG/Irodalom/18_Az_angol_reneszansz_drama.org
@@ -60,7 +60,7 @@
 - Szószerkezetek: *antik klasszicizmusból vett szó-kép párok*, allegorikus jelképek  
 
 ** Drámai szerkezet
-- Öt felvonásos szerkezet: *expozíció, bonyodalom, tetőpont, megoldás*
+- Öt felvonásos szerkezet: *expozíció, bonyodalom, tetőpont, cselekvés, megoldás*
 - Kettős cselekményszál: fő- és mellékszálak váltakozása  
 
 ** Pódium és díszlet
